# adventofcode

./: .gitignore  README.md
aoc2024/day01/: CMakeLists.txt  main.cc
aoc2024/day02/: CMakeLists.txt  main.cc
aoc2024/day03/: CMakeLists.txt  build.zsh  main.cc  run.zsh
aoc2024/day04/: main.cc
aoc2024/day05/: main.cc
aoc2024/day06/: main.cc
aoc2024/day07/: CMakeLists.txt  main.cc  parser.cc  parser.h
aoc2024/day08/: CMakeLists.txt  main.cc  parse.cc  parse.h
aoc2024/day09/: main.cc
aoc2024/day10/: main.cc
aoc2025/: README.md  pyproject.toml
aoc2025/day01/: main.py
aoc2025/day02/: main.py
aoc2025/day03/: main.py
aoc2025/day04/: main.py
